--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,9 @@ edition = "2024"
 
 [dependencies]
 chrono = "0.4.43"
+rand = "0.10.0"
+strum = "0.27.2"
+strum_macros = "0.27.2"
 
 [lints.clippy]
 pedantic = { level = "warn", priority = -1 }
